    user-defined label exists. Works well together with unchecking the
    "export code cells" config item.
  * A separate text style for user-defined labels.
  * The "evaluate all cells" and "evaluate till here" now start with a fresh
    instance of maxima
  * TeX export now should work with most unicode chars we have ESC sequences
    for.
  * A few new ESC sequences and markdown commands.
  * "#" now is shown as a "not equal" sign and a "not equal" sign is interpreted
    as "#".
  * Many bug, usability and performance fixes
  * Most importantly: If it is a cursor it blinks now.

15.08:
  * Compatibility with maxima 5.37.0
  * MathJAX now provides scaleable equations and extended drag-and-drop for the html export.
  * The table-of-contents-sidebar now shows the current cursor position
  * Fixed a few instances of cursors jumping out of the screen
  * Fixed a few instances of cursors jumping to the beginning or end of the worksheet
  * Better detection which cell maxima is processing and if it still is doing so
  * Regression: Hiding the toolbar didn't work on some systems
  * Markdown support for <=, >=, <=>, <-, ->, <->, => and +/- symbols.
  * An option to not export maxima's input as well as the output.
  * An option to use High-resolution bitmaps for the HTML export.
  * Images that are too big for the window now are displayed in a scaled-down version.
  * Fixed the support for out-of-tree-bulds that was broken in 15.04
  * Meaningful ALT texts for the HTML export to provide accessibility
  * An option to include the .wxmx file in the .html export
  * Performance fixes that are espectionally effective for MSW
  * Unification of some platform-specific code
  * bash autocompletion
  * A fourth sectioning level
  * Made entering uppercase greek letters easier and documented how to input special
	unicode symbols
  * Syntax highlighting in code cells
  * Automatic highlighting of text equal to the currrently selected one.