@@ -79,6 +79,8 @@ public:
     menu_pane_structure,       	//!< Both the "toggle the structure pane" command and the structure
     menu_pane_xmlInspector,        //!< Both the "toggle the xml monitor" command and the monitor pane
     menu_pane_format,		//!< Both the "toggle the format pane" command and the format pane
+    menu_pane_greek,            //!< Both the "toggle the format pane" command for the "greek" pane
+    menu_pane_symbols,          //!< Both the "toggle the format pane" command for the "symbols" pane
     /*! Both used as the "toggle the stats pane" command and as the ID of the stats pane
 
       Since this enum is also used for iterating over the panes it is vital 
@@ -433,7 +435,15 @@ private:
   wxPanel *CreateStatPane();
   wxPanel *CreateMathPane();
   wxPanel *CreateFormatPane();
+
+  //! A button for the greek pane
+  wxStaticText *CharButton(wxPanel *parent,wxChar ch,wxString description=wxEmptyString);
+#ifdef wxUSE_UNICODE
+  wxPanel *CreateGreekPane();
+  wxPanel *CreateSymbolsPane();
+#endif
 protected:
+  void CharacterButtonPressed(wxMouseEvent &event);
   void LoadRecentDocuments();
   void SaveRecentDocuments();
   wxAuiManager m_manager;
